<package>

  <name>lslidar_n301</name>
  <version>1.2.0</version>
  <description>
    Basic ROS support for the Leishen N301 LIDARs.
  </description>
  <maintainer email="support@lslidar.com">Shenzhen Leishen Intelligence System Co, Ltd</maintainer>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/lslidar_n301</url>
  <author>Nick Shu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_n301_driver</run_depend>
  <run_depend>lslidar_n301_msgs</run_depend>
  <run_depend>lslidar_n301_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
