<?xml version="1.0"?>
<package format="2">

  <name>lslidar_n301_decoder</name>
  <version>1.2.0</version>
  <description>
    Point cloud conversions for Leishen N301 LIDARs.
  </description>
  <maintainer email="support@lslidar.com">Shenzhen Leishen Intelligence System Co, Ltd</maintainer>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/lslidar_n301</url>
  <author>Nick Shu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libpcl-all</depend>

  <depend>lslidar_n301_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_lslidar_n301_decoder.xml"/>
  </export>

</package>
