<package>

  <name>lslidar_n301_msgs</name>
  <version>1.2.0</version>
  <description>
    ROS message definitions for Leishen N301 LIDARs.
  </description>
  <maintainer email="support@lslidar.com">Shenzhen Leishen Intelligence System Co, Ltd</maintainer>
  <license>BSD</license>
  <url type="website">https://wiki.ros.org/lslidar_n301</url>
  <author>Nick Shu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
